Added composer script for coverage

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "test:coverage-html": [
+            "@putenv XDEBUG_MODE=coverage",
+            "php bin/phpunit --coverage-html reports"
         ]
     },
     "conflict": {
